# voice-coding-assistant

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  index.html  package.json  tailwind.config.js  vite.config.ts  voice.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AudioVisualizer.tsx  ModelManager.tsx  SettingsPanel.tsx  SiriWave.tsx  VoiceModal.tsx
src/hooks/: useAudioRecorder.ts  useLLMRephraser.ts  useLocalTranscription.ts  useSpeechToText.ts
src/test/: ModelManager.test.tsx  setup.ts  useAudioRecorder.test.ts  useLocalTranscription.test.ts
voice-coding-assistant/: .gitignore  AGENTS.md  package.json  vite.config.ts
voice-coding-assistant/src/: App.tsx  voice.tsx
voice-coding-assistant/src-tauri/: Cargo.toml  tauri.conf.json
voice-coding-assistant/src-tauri/icons/: generate_icons.py  icon.icns
voice-coding-assistant/src-tauri/src/: commands.rs  main.rs
voice-coding-assistant/src/components/: SettingsPanel.tsx  VoiceModal.tsx
voice-coding-assistant/src/hooks/: useAudioRecorder.ts  useLLMRephraser.ts
